# delta-lake-getting-started

./: README.rst  pyproject.toml
delta_lake_getting_started/: tutorial.ipynb
tests/: test_delta_lake_getting_started.py
